Update Java option for Java 8.
Java8 does away with the permanent generation and replaces it with the metaspace.